; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r600_dpm.c_r600_set_at.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r600_dpm.c_r600_set_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@CG_RT = common dso_local global i32 0, align 4
@CG_LT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r600_set_at(%struct.radeon_device* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.radeon_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @CG_RT, align 4
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @FLS(i32 %12)
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @FMS(i32 %14)
  %16 = or i32 %13, %15
  %17 = call i32 @WREG32(i32 %11, i32 %16)
  %18 = load i32, i32* @CG_LT, align 4
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @FHS(i32 %19)
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @FMS(i32 %21)
  %23 = or i32 %20, %22
  %24 = call i32 @WREG32(i32 %18, i32 %23)
  ret void
}

declare dso_local i32 @WREG32(i32, i32) #1

declare dso_local i32 @FLS(i32) #1

declare dso_local i32 @FMS(i32) #1

declare dso_local i32 @FHS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
